Added a folder 'References' to the project folder that contains the reference 'fastJson.dll' and reference to it from within the IDE so no more need to add it manually to the 'bin\Debug" folder.

--- a/Free Gamma.csproj
+++ b/Free Gamma.csproj
@@ -38,9 +38,8 @@
     <ApplicationIcon>VS2013_Application.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="fastJSON, Version=2.2.0.0, Culture=neutral, PublicKeyToken=6b75a806b86095cd, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\fastJSON.dll</HintPath>
+    <Reference Include="fastJSON">
+      <HintPath>References\fastJSON.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
