Added 'Settings' window and a setting option that enables the app to start automatically with windows startup.

--- a/Free Gamma.csproj
+++ b/Free Gamma.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -62,6 +63,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="form_Settings.xaml.cs">
+      <DependentUpon>form_Settings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="mod_General.cs" />
     <Page Include="ctrl_About.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -89,6 +93,10 @@
     <Compile Include="form_CalibImage.xaml.cs">
       <DependentUpon>form_CalibImage.xaml</DependentUpon>
     </Compile>
+    <Page Include="form_Settings.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
