Minor improvements and bug fixes: 1. Revert back from using mutex to maintain single-instance app to the previous method (checking running processes), surprisingly this method performs better specially when restoring the running app window. 2. New context menus style. 3. Code cleanup.

--- a/Free Gamma.csproj
+++ b/Free Gamma.csproj
@@ -70,6 +70,7 @@
       <DependentUpon>form_Settings.xaml</DependentUpon>
     </Compile>
     <Compile Include="mod_General.cs" />
+    <Compile Include="StringMessage.cs" />
     <Page Include="ctrl_About.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -147,7 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\close.png" />
-    <Resource Include="Resources\max.png" />
+    <Resource Include="Resources\maximize.png" />
     <Resource Include="Resources\minimize.png" />
     <Resource Include="Resources\tray.png" />
   </ItemGroup>
